Refcator:Core stream, wathcdog, quote stream ++ 1. Deep streams refactor. Implemented core shared wss stream sharedWssStream$ handling basic and reconnect logic. 2.1 Separate stream to handle ws server system messages was created based on core sharedWssStream$. method createWssSystemStream() 2.2 Separate wathcdog stream to monitor breaks in quotes stream was created based on core sharedWssStream$. method createWatchDogStream() 2.3 New refactored quotes stream was created based on core sharedWssStream$. method createQuoteStream() 3. Main quote stream refactor:   - bufferTime operator implemented instead of throttleTime to eliminate overhead of manual buffer handling. bufferTime creates array of rates arrays received from the server. then array flattened   - Map instead of Array. rates accumulate in Map and use set to update insted of findIndex and push. Such pattern allows to reduce complexity form O(N) to O(1)   - Main quotes source (quotesDataMap) updated from the buffer array using set operator. By such means the old quotes will be rewrited, new added. Since order of buffer remains (for one symbol the last rates will be in the bottom and will be handled at the end) only last rate will end up in the final main quotes source (quotesDataMap)   - buffer period update. implemented pattern BehaviourSubject => pipe + switchMap (when new buffer period arrives from UI, current stream will be properly closed and tore down. New stream with new buffer period will be created insted) 4. public method disconnectFromServer was fixed. Incorrect pattern with unsubscribe which could lead to memory leaks changed to the safe one with complete. tear down all connnected subscriptions with taktakeUntil trigger and correctly reset service state 5. Buffer period updating has been optimized. Implemented BehaviourSubject responsible for tracking buffer period update. Main 6. Add destroyStreams$ trigger to implement taktakeUntil() to all subscriptions and prevent any memory leaks. 7. refactor

--- a/src/app/components/rt-quotes-table/rt-quotes-table.component.scss
+++ b/src/app/components/rt-quotes-table/rt-quotes-table.component.scss
@@ -110,7 +110,7 @@ input:-webkit-autofill:focus {
       min-width: 200px;
     }
 
-    &__cache {
+    &__buffer {
       display: inline-flex;
       align-items: center;
       justify-content: center;
